# coins-obj-seg

./: .dockerignore  .gitignore  README.md  docker-compose.yml  lvis_categories_full.json  main.py  pyproject.toml
services/florence_api/: .dockerignore  .env.example  README.md  __init__.py  contracts.py  main.py  models.py  pyproject.toml  requirements.txt  service.py  settings.py
services/florence_api/app/: __init__.py  constants.py  contracts.py  main.py  models.py  service.py
services/predict_api/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  contracts.py  main.py  pyproject.toml  requirements.txt  service.py  settings.py
services/predict_api/app/: __init__.py  constants.py  contracts.py  main.py  service.py
services/sam_api/: .env.example  Dockerfile  README.md  __init__.py  contracts.py  main.py  models.py  pyproject.toml  requirements.txt  service.py  settings.py
services/sam_api/app/: __init__.py  constants.py  contracts.py  main.py  models.py  service.py
